# truk

./: .ccls  .clangd  .editorconfig  .gitignore  AETHER_ARRAYS.md  AUDIT.md  CMakeLists.txt  Dockerfile  LANGUAGE_DEVELOPMENT.md  LANGUAGE_SCRATCH_PAD.md  LANG_IDEA.md  LICENSE  README.md  TODO.md  TRUK_KIT.md  UPGRADES.md  about.md  bar.sh  bucket  building.md  builtins.md  dirs.txt  example  example.truk  example_shard.truk  file.truk  format.sh  hello.truk  idea.md  language_nodes.md  memory.md  moot.truk  notes.md  output.c  output.h  stats.sh  t.truk  test.truk  test_args.truk  test_args_full.truk  (+8 more)
OLD/: CMakeLists.txt  NOTES.md  README.md  test_args.truk  test_char_demo.truk
OLD/apps/truk/: main.cpp
OLD/apps/truk/commands/: compile.hpp  tcc.cpp  test.hpp
OLD/cmake/: EmbedRuntime.cmake  GetGitHash.cmake  TrukHelpers.cmake  build_info.hpp.in
OLD/docs/compiler-internals/: error-handling.md  typechecker.md
OLD/docs/language/: imports.md  privacy.md
OLD/experiments/2025-12-10-example/: CMakeLists.txt  main.cpp
OLD/experiments/aether/: CMakeLists.txt
OLD/experiments/aether/tests/: CMakeLists.txt  test_bool.cpp
OLD/garage/demo_app/: README.md
OLD/garage/shards/shard_set_a/: file2.truk
OLD/garage/shards/shard_set_b/: api.truk  file1.truk  file2.truk
OLD/ideas/: structs.md
OLD/libs/: CMakeLists.txt
OLD/libs/core/: CMakeLists.txt
OLD/libs/core/tests/: test_core.cpp  test_environment.cpp  test_memory.cpp
OLD/libs/emitc/src/: builtin_handlers.cpp  builtin_registry.cpp  emitter.cpp  expression_visitor.cpp
OLD/libs/emitc/tests/: CMakeLists.txt
OLD/libs/ingestion/tests/: CMakeLists.txt
OLD/libs/language/src/: keywords.cpp
OLD/shop/: io_example.truk
OLD/shop/stdlib/io/: _io.md  io.truk  lib.truk  types.truk
OLD/sxs/include/sxs/: runtime.h
OLD/sxs/src/: runtime.c
OLD/sxs/tests/: CMakeLists.txt
OLD/tests/expects/arg_count_failure/: test_too_few_args.truk
OLD/tests/expects/arg_type_failure/: test_wrong_arg_type.expect
OLD/tests/expects/array_index_failure/: test_float_index.expect
OLD/tests/expects/basic_failure/: test_basic_failure.expect  test_basic_failure.truk
OLD/tests/expects/binary_op_failure/: test_add_incompatible.truk
OLD/tests/expects/char_failure/: test_char_empty.truk  test_char_invalid_escape.expect  test_char_multiple.expect  test_char_multiple.truk
OLD/tests/expects/enum_failure/: test_enum_array_base_type.truk  test_enum_bool_base_type.truk  test_enum_float_base_type.expect  test_enum_map_base_type.truk  test_enum_struct_base_type.expect  test_enum_struct_base_type.truk  test_enum_tuple_base_type.expect  test_enum_void_base_type.truk
OLD/tests/expects/map_key_failure/: test_array_key.expect  test_pointer_to_int_key.expect  test_struct_key.expect  test_wrong_key_type.expect  test_wrong_value_type.truk
OLD/tests/expects/match_failure/: test_match_no_wildcard.expect  test_match_no_wildcard.truk  test_match_non_matchable_type.expect  test_match_non_matchable_type.truk  test_match_type_mismatch.expect
OLD/tests/expects/return_type_failure/: test_wrong_return_type.expect
OLD/tests/expects/type_mismatch_failure/: test_string_to_int.expect  test_string_to_int.truk
OLD/tests/meta_test_testing_fw/: run.sh
OLD/tests/return_code_assertions/: run.sh
OLD/tests/return_code_assertions/arrays/: truk_arrays_bool_0.truk
OLD/tests/return_code_assertions/as/: truk_cast_assignment_rhs_99.truk  truk_cast_basic_i64_to_i32_42.truk  truk_cast_chained_50.truk  (+13 more)
OLD/tools/syntax/: .vscodeignore  install.sh
apps/meta/: CMakeLists.txt  about.md  main.cpp
apps/truk/: CMakeLists.txt  main.cpp  truk.md
apps/truk/commands/: build.cpp  build.hpp  clean.cpp  clean.hpp  compile.cpp  compile.hpp  import_resolver.cpp  import_resolver.hpp  new.cpp  new.hpp  run.cpp  run.hpp  tcc.cpp  tcc.hpp  test.cpp  test.hpp  toc.cpp  toc.hpp
apps/truk/common/: args.cpp  args.hpp  file_utils.cpp  file_utils.hpp
cmds/truk/: CMakeLists.txt  main.c  main.cpp
libs/core/: CMakeLists.txt
libs/core/src/: cache.cpp  core.cpp  environment.cpp  error_display.cpp  error_reporter.cpp  memory.cpp  rll.cpp
libs/core/tests/: CMakeLists.txt  test_core.cpp  test_environment.cpp  test_memory.cpp
libs/emitc/: CMakeLists.txt
libs/emitc/include/: cdef.hpp  emitter.hpp
libs/emitc/src/: builtin_handlers.cpp  emission_context.cpp  emitter.cpp  expression_visitor.cpp  instantiation_collector.cpp  output_buffer.cpp  type_registry.cpp  variable_registry.cpp
libs/emitc/tests/: test_emitter.cpp
libs/ingestion/: CMakeLists.txt
libs/ingestion/src/: file_utils.cpp  import_resolver.cpp  ingestion.cpp  parser.cpp  tokenize.cpp
libs/ingestion/tests/: CMakeLists.txt  test_ingestion.cpp  test_parser.cpp  test_parser.cpp.bak  test_parser.cpp.bak2
libs/kit/: CMakeLists.txt
libs/kit/src/: kit.cpp  parser.cpp  resolver.cpp  utils.cpp
libs/kit/tests/: CMakeLists.txt  test_kit.cpp
libs/tcc/: CMakeLists.txt
libs/tcc/src/: tcc.cpp
pkg/buffer/tests/: CMakeLists.txt  buffer_manipulation_tests.c  buffer_tests.c  split_buffer_tests.c  sub_buffer_tests.c
pkg/ctx/: CMakeLists.txt  ctx.c  ctx.h
pkg/ctx/tests/: CMakeLists.txt  ctx_tests.c
pkg/example/: CMakeLists.txt  about.md  example.h
pkg/example/tests/: CMakeLists.txt
pkg/map/tests/: CMakeLists.txt  map_tests.c
pkg/matter/: CMakeLists.txt  matter.hpp
pkg/matter/tests/: CMakeLists.txt  test_matter.cpp
pkg/scanner/tests/: CMakeLists.txt  scanner_find_group_tests.c  scanner_stress_tests.c  scanner_tests.c
pkg/screen/: CMakeLists.txt  screen.c  screen.h
pkg/screen/tests/: CMakeLists.txt
pkg/slp/: CMakeLists.txt  slp.c  slp.h  state_machine.md
pkg/slp/tests/: CMakeLists.txt  slp_test.c  test_basic_parsing.c  test_comments.c  test_edge_cases.c  test_errors.c  test_lists.c  test_nested_positions.c  test_object_management.c  test_quoted.c  test_virtual_lists.c  tests.todo.md
pkg/sxs/src/: CMakeLists.txt  sxs.c
runtime/sxs/: CMakeLists.txt  README.md
runtime/sxs/src/: runtime.c  test.c
runtime/sxs/tests/: CMakeLists.txt  test_buffer.cpp  test_map.cpp  test_runtime.cpp  test_scanner.cpp
(+1169 files in other folders)
